# borealis-rs

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: android.rs  nanovg.rs  nanovg_t.rs  window.rs  window_core.rs
src/: lib.rs  main.rs
src/core/: application.rs  mod.rs  view.rs
src/lib/core/: application.rs  bind.rs
