[package]
name = "borealis-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin/egl"]
glx = ["glutin/glx", "glutin/x11", "winit/x11", "x11"]
wgl = ["glutin/wgl"]
x11 = ["glutin/x11", "winit/x11"]
wayland = ["glutin/wayland", "winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita-notitle"]

[dependencies]
glutin = { version = "0.30.0-beta.3", default-features = false }
winit = { version = "0.27.2", default-features = false }
raw-window-handle = "0.5.0"
nanovg = { git = "https://github.com/FayeSpica/nanovg-rs.git", branch = "master", default-features = false, features = ["gles2"] }
nanovg-sys = { git = "https://github.com/FayeSpica/nanovg-rs.git", branch = "master", default-features = false, features = ["gles2"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7" # Keep in sync with winit dependency

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"

[[example]]
name = "android"
crate-type = ["cdylib"]
